# RustClaw

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE  LICENSE.zh-CN.md  PROMPT_ITERATION_SOP.md  README.md  README.zh-CN.md  README_cn.md  RUSTCLAW_SERVICE_README.md  RustClaw.md  TODO_multilingual_hard_routing.md  USAGE.md  build-all.sh  build-ui-nginx.sh  check-logs.sh  countdown.py  cross-build-pi.sh  cross-build-upload-cloud.sh  cross-build-upload.sh  deploy-pi-nginx.sh  deploy-ui-nginx.sh  docker-compose.yml  failed-routing-cases.md  git-add-exclude.sh  git-sync-push.sh  install-rustclaw-cmd.sh  local-cross-build-upload-pi.sh  ls_test.txt  ls_test2.txt  memory-usage-plan.md  openclaw_direction_codex_checklist.md  openclaw_direction_refactor.md  pack-to-parent.sh  package-lock.json  package-release.sh  package.json  path_note.txt  push-sanitized-configs.sh  (+24 more)
crates/clawcli/: Cargo.toml
crates/clawcli/resources/: en.toml  zh-CN.toml
crates/clawcli/src/: auth.rs  chat.rs  chat_tests.rs  client.rs  commands.rs  commands_coding_projection_tests.rs  commands_cost_tests.rs  commands_llm_trace_tests.rs  commands_models_tests.rs  commands_session_tests.rs  commands_tests.rs  events.rs  events_tests.rs  interrupt.rs  main.rs  main_tests.rs  output.rs  output_tests.rs  replay.rs  replay_fingerprint.rs  replay_tests.rs  resources.rs  resources_tests.rs  task.rs  task_tests.rs
crates/clawcli/src/commands/: code_control.rs  code_control_tests.rs  common.rs  exec.rs  exec_stream_tests.rs  goal.rs  health.rs  llm_trace.rs  mcp.rs  mcp_tests.rs  models.rs  permission.rs  report.rs  report_budget_health.rs  report_coding.rs  report_cost.rs  report_outcome.rs  run_skill.rs  session.rs  skills.rs  submit.rs  task_control.rs  task_query.rs  tui.rs
crates/clawcli/tests/: chat_continuity.rs  interrupt_detach.rs  mcp_commands.rs
crates/clawd/: Cargo.toml
crates/clawd/src/: agent_engine.rs  agent_engine_tests.rs  agent_hooks.rs  agent_hooks_tests.rs  agent_hooks_transport_tests.rs  agent_runtime_contract.rs  answer_verifier.rs  answer_verifier_control_envelope.rs  answer_verifier_delivery_exact.rs  answer_verifier_delivery_raw.rs  answer_verifier_evidence_policy.rs  answer_verifier_machine_kv.rs  answer_verifier_matrix.rs  answer_verifier_runtime.rs  answer_verifier_scalar.rs  answer_verifier_structured_record.rs  answer_verifier_structured_record_tests.rs  answer_verifier_tests.rs  app_helpers.rs  approval_grant.rs  approval_grant_tests.rs  ask_flow.rs  ask_flow_active_context.rs  ask_flow_chat_helpers.rs  ask_flow_gate_contract.rs  ask_flow_gate_execution.rs  ask_flow_gate_policy.rs  ask_flow_pre_planner_exit.rs  ask_flow_recent_count.rs  ask_flow_resume.rs  ask_flow_tests.rs  async_job_contract.rs  async_job_contract_tests.rs  capability_map.rs  capability_map_tests.rs  capability_resolver.rs  capability_resolver_tests.rs  capability_result.rs  capability_result_tests.rs  channel_send.rs  (+252 more)
crates/clawd/src/agent_engine/: action_batch_contract.rs  action_batch_contract_tests.rs  action_route_locator_artifact.rs  archive_database_aggregate_plan.rs  arg_resolver.rs  arg_resolver_tests.rs  async_start_checkpoint.rs  async_start_checkpoint_tests.rs  attempt_ledger.rs  attempt_ledger_tests.rs  capability_discovery.rs  capability_discovery_tests.rs  capability_result_synthesis.rs  capability_result_synthesis_tests.rs  checkpoint_resume_state.rs  checkpoint_resume_state_tests.rs  child_task_execution_policy.rs  child_task_execution_policy_tests.rs  concrete_respond_structural_observation.rs  config_guard_capability_repair.rs  configured_command_prefix.rs  configured_command_prefix_run_cmd_contract.rs  context_compaction.rs  dispatch_support.rs  (+173 more)
crates/clawd/templates/: feishu_china_config.toml
crates/clawd/tests/: compact_prompt_guards.rs  config_templates.rs
crates/larkd/: Cargo.toml
crates/larkd/src/: config_helpers.rs  main.rs  main_tests.rs
crates/skills/audio_synthesize/: Cargo.toml  INTERFACE.md
crates/skills/audio_transcribe/: Cargo.toml  INTERFACE.md
crates/skills/config_edit/: Cargo.toml  INTERFACE.md
crates/skills/doc_parse/: Cargo.toml  INTERFACE.md
crates/skills/extension_manager/: Cargo.toml  INTERFACE.md
crates/skills/http_basic/: Cargo.toml  INTERFACE.md
crates/skills/image_edit/: Cargo.toml  INTERFACE.md
crates/skills/image_generate/: Cargo.toml  INTERFACE.md
crates/skills/invest_copy/: Cargo.toml  INTERFACE.md  personas.toml
crates/skills/kb/: Cargo.toml  INTERFACE.md
crates/skills/map_merchant/: Cargo.toml  INTERFACE.md
crates/skills/music_generate/: Cargo.toml  INTERFACE.md
crates/skills/office_workspace/: Cargo.toml  INTERFACE.md
crates/skills/photo_organize/: Cargo.toml  INTERFACE.md
crates/skills/rss_fetch/: Cargo.toml  INTERFACE.md
crates/skills/service_control/: Cargo.toml  INTERFACE.md
crates/skills/stock/: Cargo.toml  INTERFACE.md
crates/skills/system_basic/: Cargo.toml  INTERFACE.md
crates/telegramd/: Cargo.toml
crates/telegramd/src/: binding_voice.rs  commands.rs  main.rs  main_bind_gate_tests.rs  main_model_config_tests.rs  main_telegram_text_payload_tests.rs  media_handlers.rs  message_handler.rs  task_delivery.rs  telegram_buttons.rs  telegram_buttons_tests.rs  telegram_formatting.rs  telegram_prompts.rs
crates/webd/: Cargo.toml
crates/webd/src/: main.rs  main_tests.rs
crates/wechat-ilink/: Cargo.toml
crates/wechat-ilink/src/: cdn.rs  cdn_tests.rs  crypto.rs  http.rs  lib.rs
crates/wechatd/: Cargo.toml
crates/wechatd/src/: binding.rs  config_cache.rs  config_section.rs  helpers.rs  ilink.rs  incoming.rs  login_routes.rs  main.rs  main_tests.rs  reply_delivery.rs  task_flow.rs  wechat_api.rs  wechat_silk_wav.rs
crates/whatsapp_webd/: Cargo.toml
crates/whatsapp_webd/src/: main.rs
crates/whatsappd/: Cargo.toml
crates/whatsappd/src/: main.rs  main_tests.rs
llm-relay-server/: Cargo.toml  README.md
llm-relay-server/src/: config.rs  main.rs  openai.rs  quota.rs
optional_skills/crypto/: Cargo.toml  INTERFACE.md
optional_skills/crypto/src/: exchange_api.rs  i18n.rs  main.rs  market_handlers.rs
(+8350 files in other folders)
