[workspace]
resolver = "2"
members = [
    "crates/claw-core",
    "crates/clawd",
    "crates/skill-runner",
    "crates/telegramd",
    "crates/feishud",
    "crates/larkd",
    "crates/whatsappd",
    "crates/whatsapp_webd",
    "crates/skills/archive_basic",
    "crates/skills/audio_synthesize",
    "crates/skills/audio_transcribe",
    "crates/skills/chat",
    "crates/skills/config_guard",
    "crates/skills/crypto",
    "crates/skills/db_basic",
    "crates/skills/docker_basic",
    "crates/skills/fs_search",
    "crates/skills/git_basic",
    "crates/skills/health_check",
    "crates/skills/http_basic",
    "crates/skills/image_edit",
    "crates/skills/image_generate",
    "crates/skills/image_vision",
    "crates/skills/install_module",
    "crates/skills/log_analyze",
    "crates/skills/package_manager",
    "crates/skills/process_basic",
    "crates/skills/rss_fetch",
    "crates/skills/service_control",
    "crates/skills/task_control",
    "crates/skills/system_basic",
    "crates/skills/stock",
    "crates/skills/x",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["RustClaw"]
repository = ""

[patch.crates-io]
# feishud long_connection: receive raw event payload to tolerate null fields (open-lark strong types fail)
open-lark = { path = "patches/open-lark" }

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
base64 = "0.22"
config = "0.15"
regex = "1"
# 使用 rustls 替代 native-tls，交叉编译 aarch64 时无需目标平台 OpenSSL
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# bundled：从源码编译 SQLite，交叉编译 aarch64 时无需目标平台 libsqlite3
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# default-features = false + rustls 便于交叉编译 aarch64（无需 OpenSSL）
teloxide = { version = "0.12", default-features = false, features = ["rustls", "ctrlc_handler"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
