[package]
name = "clawd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
claw-core = { path = "../claw-core" }
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
toml.workspace = true
chrono = "0.4.44"
chrono-tz = "0.10.4"
