[package]
name = "clawd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["multipart"] }
base64.workspace = true
claw-core = { path = "../claw-core" }
wechat-ilink = { path = "../wechat-ilink" }
reqwest.workspace = true
rmcp.workspace = true
rusqlite.workspace = true
r2d2 = "0.8"
r2d2_sqlite = "0.25"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
toml.workspace = true
thiserror.workspace = true
chrono = "0.4.44"
chrono-tz = "0.10.4"
futures-util = "0.3"
tower-http = { version = "0.6", features = ["fs", "cors", "set-header"] }
regex = "1"
argon2 = "0.5"
sha2 = "0.10"
