[package]
name = "larkd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lark (international) app bot channel daemon: event callback, media inbox, submit to clawd, deliver result. Separate from feishud (Feishu China)."

[dependencies]
anyhow.workspace = true
axum.workspace = true
claw-core = { path = "../claw-core" }
open-lark = { version = "0.14", default-features = false, features = ["im", "authentication", "websocket"] }
reqwest.workspace = true
serde.workspace = true
sha2 = "0.10"
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-log = "0.2"
tracing-subscriber.workspace = true
toml.workspace = true
urlencoding = "2"
uuid.workspace = true
