[package]
name = "telegramd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
claw-core = { path = "../claw-core" }
reqwest.workspace = true
serde_json.workspace = true
teloxide.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
