[package]
name = "wechat-ilink"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Weixin ilink CDN + AES helpers (aligned with @tencent-weixin/openclaw-weixin)"

[dependencies]
aes = "0.8"
base64.workspace = true
cipher = "0.4"
hex = "0.4"
md-5 = "0.10"
rand = "0.8"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1"
urlencoding = "2"
