[package]
name = "wechatd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RustClaw WeChat channel daemon (MVP skeleton)"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
claw-core = { path = "../claw-core" }
reqwest.workspace = true
qrcodegen = "1.8.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
