[package]
name = "crypto-skill"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crypto-skill"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hmac = "0.12"
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
toml.workspace = true
urlencoding = "2"
