[package]
name = "audio-synthesize-skill"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "audio-synthesize-skill"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
