[package]
name = "config-edit-skill"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "config-edit-skill"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit = "0.22"
