[package]
name = "doc-parse-skill"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "doc-parse-skill"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
office_workspace = { package = "office-workspace-skill", path = "../office_workspace" }
zip = { version = "2", default-features = false, features = ["deflate"] }
