[package]
name = "extension-manager-skill"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "extension-manager-skill"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
claw-core = { path = "../../claw-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
