[package]
name = "http-basic-skill"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "http-basic-skill"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
