[package]
name = "image-edit-skill"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "image-edit-skill"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
reqwest = { workspace = true, features = ["blocking", "multipart"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
