[package]
name = "image-generate-skill"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "image-generate-skill"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
