[package]
name = "invest-copy-skill"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Investment-style copy: LLM summary + persona tone (OpenAI-compatible; heuristic fallback optional)"

[[bin]]
name = "invest-copy-skill"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml.workspace = true
regex = "1"
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
