[package]
name = "map-merchant-skill"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "map-merchant-skill"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
toml.workspace = true
urlencoding = "2"
