[package]
name = "office-workspace-skill"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "office-workspace-skill"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
hex.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
zip = { version = "2", default-features = false, features = ["deflate"] }
