[package]
name = "rss-fetch-skill"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rss-fetch-skill"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
