[package]
name = "stock-skill"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "stock-skill"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
encoding_rs = "0.8"
toml.workspace = true
