[package]
name = "system-basic-skill"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "system-basic-skill"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono = "0.4.44"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
toml.workspace = true
uuid.workspace = true
serde_yaml = "0.9"
